--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-Hello World, I am Zoid
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title>Zoid Okkake Infomation</title>
+	<meta name="description" content="">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<link rel="icon" href="favicon.ico">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<script src="/js/jquery-3.2.1.min.js"></script>
+	<script src="/js/togglemenu.js"></script>
+	<script src="/js/scroll-top.js"></script>
+	<link href="/style.css" rel="stylesheet" type="text/css">
+	<link href="/css/home.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+<div class="wrap home">
+
+	<header>
+		<div class="container">
+			<h1><a href="/">Zoid Okkake Infomation</a></h1>
+			<div class="gnavi pc">
+				<ul>
+					<li class="home"><a href="/">トップ</a></li>
+					<li class="goshogi"><a href="/">囲碁将棋</a></li>
+					<li class="horserace"><a href="/">競馬</a></li>
+					<li class="others"><a href="/">その他</a></li>
+				</ul>
+			</div>
+			<div class="menu sp">
+				<a class="trigger" href="#">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</a>
+			</div>
+		</div>
+	</header>
+	<div class="gnavi sp">
+		<ul>
+			<li class="home"><a href="/">トップ</a></li>
+			<li class="goshogi"><a href="/">囲碁将棋</a></li>
+			<li class="horserace"><a href="/">競馬</a></li>
+			<li class="others"><a href="/">その他</a></li>
+		</ul>
+	</div>
+
+	<div class="main-img">
+		<h2>Zoid Okkake Infomation</h2>
+	</div>
+
+	<div class="content">
+		<div class="main">
+			<h2>コンテンツ</h2>
+		</div>
+		<div class="side">
+			<ul>
+				<li class="goshogi"><a href="/">囲碁将棋</a></li>
+				<li class="horserace"><a href="/">競馬</a></li>
+				<li class="others"><a href="/">その他</a></li>
+			</ul>
+		</div>
+	</div>
+
+	<footer>
+		<div class="container">
+			<div class="totop">
+				<a href="#" id="scroll-top">
+					<img src="/images/footer/totop.png" alt="トップヘ戻る" width="40" height="40" />
+				</a>
+			</div>
+			<div class="fnavi">
+				<ul>
+					<li class="goshogi"><a href="/">囲碁将棋</a></li>
+					<li class="horserace"><a href="/">競馬</a></li>
+					<li class="others"><a href="/">その他</a></li>
+				</ul>
+			</div>
+			<div class="finfo">
+				<h1><a href="/">Zoid Okkake Infomation</a></h1>
+				<div class="copy">Copyright © 2018 Tsukamoto Shoosen All Right Reserved.</div>
+			</div>
+		</div>
+	</footer>
+</div><!-- .wrap -->
+</body>
+</html>
+
