--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
 	<footer>
 		<div class="container">
+			<div>some chages!</div>
 			<div class="totop">
 				<a href="#" id="scroll-top">
 					<img src="/images/footer/totop.png" alt="トップヘ戻る" width="40" height="40" />
