--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
 	</div>
 
 	<div class="content">
-		<div class="main">
-			<h2>コンテンツ</h2>
-		</div>
-		<div class="side">
-			<ul>
-				<li class="goshogi"><a href="/goshogi/">囲碁将棋</a></li>
-				<li class="horserace"><a href="/">競馬</a></li>
-				<li class="others"><a href="/">その他</a></li>
-			</ul>
+		<div class="container">
+			<div class="main">
+				<h2>コンテンツ</h2>
+			</div>
+			<div class="side">
+				<ul>
+					<li class="goshogi"><a href="/goshogi/">囲碁将棋</a></li>
+					<li class="horserace"><a href="/">競馬</a></li>
+					<li class="others"><a href="/">その他</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
